<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="110sp"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/item_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/item"
        android:baselineAligned="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item_wea_city"
                style="@style/list_view_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/city" 
                android:textSize="28sp" />

            <TextView
                android:id="@+id/item_wea_weather1"
                android:textColor="@color/item_color_0" 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/weather"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item_wea_temp1"
                style="@style/list_view_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/temp"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/item_wea_img1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/weather"
                android:scaleType="centerInside"
                android:src="@drawable/d_3" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>