<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/item_wea_city"
                        style="@style/list_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginTop="5dip"
                        android:gravity="center|left"
                        android:text="@string/city"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/item_wea_air"
                        style="@style/list_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dip"
                        android:layout_marginTop="5dip"
                        android:gravity="center|left"
                        android:text="@string/air"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/item_color_4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-15dip"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-20dip"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/item_wea_temp_now"
                            style="@style/list_view_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="30dip"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/temp"
                            android:textSize="95dip" />

                        <ImageView
                            android:id="@+id/item_wea_img1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/d_0" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-20dip"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/item_wea_temp1"
                            style="@style/list_view_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/temp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#ffffff" />

                        <TextView
                            android:id="@+id/item_wea_weather1"
                            style="@style/list_view_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/weather"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/item_color_0" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="18dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/item_wea_week2"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/item_wea_img2"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:layout_marginTop="5dip"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/d_1" />

                <TextView
                    android:id="@+id/item_wea_temp2"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <View
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dip"
                android:layout_marginTop="8dip"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/item_wea_week3"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/item_wea_img3"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                     android:layout_marginTop="5dip"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/d_1" />

                <TextView
                    android:id="@+id/item_wea_temp3"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <View
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dip"
                android:layout_marginTop="8dip"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/item_wea_week4"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/week"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/item_wea_img4"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                     android:layout_marginTop="5dip"
                    android:scaleType="centerInside"
                    android:src="@drawable/d_1" />

                <TextView
                    android:id="@+id/item_wea_temp4"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="25sp" />

    </LinearLayout>

</RelativeLayout>