<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/item_wea_city"
                        style="@style/list_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginTop="5dip"
                        android:gravity="center|left"
                        android:text="@string/city"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/item_wea_temp_now"
                        style="@style/list_view_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dip"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/temp"
                        android:textSize="90dip" />

                    <ImageView
                        android:id="@+id/item_wea_img1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/d_0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/item_wea_weather1"
                        style="@style/list_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weather"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/item_color_0" />

                    <TextView
                        android:id="@+id/item_wea_air"
                        style="@style/list_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/air"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/item_color_0" />

                    <TextView
                        android:id="@+id/item_wea_temp1"
                        style="@style/list_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/temp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/item_color_0" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1sp"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/item_wea_img2"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_marginLeft="5dip"
                android:scaleType="centerCrop"
                android:src="@drawable/d_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/item_wea_week2"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/week"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/item_wea_weather2"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/weather"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_wea_temp2"
                style="@style/list_view_text_un"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1sp"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
             android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/item_wea_img3"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_marginLeft="5dip"
                android:scaleType="centerCrop"
                android:src="@drawable/d_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/item_wea_week3"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/week"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/item_wea_weather3"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/weather"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_wea_temp3"
                style="@style/list_view_text_un"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1sp"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/item_wea_img4"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_marginLeft="5dip"
                android:scaleType="centerCrop"
                android:src="@drawable/d_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/item_wea_week4"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/week"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/item_wea_weather4"
                    style="@style/list_view_text_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dip"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/weather"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_wea_temp4"
                style="@style/list_view_text_un"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/temp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="15sp" />
    </LinearLayout>

</LinearLayout>